修改了将state转为enum相关的一些内容，删除了controlState等方法，只保留turnOn等。